--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Chivo:300,700');
 
 * {
   box-sizing: border-box;
@@ -8,7 +8,8 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Chivo', sans-serif;
+  font-weight: 300;
 }
 
 .container {
@@ -30,7 +31,7 @@ body {
 
 .btn {
   display: inline-block;
-  background: #000;
+  background: #A52A2A;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -63,7 +64,7 @@ body {
 }
 
 .task.reminder {
-  border-left: 5px solid green;
+  border-left: 5px solid rgb(67, 67, 68);
 }
 
 .task h3 {
